...
        userLocation={userLocation}
        initialRegion={initialRegion}
        onMarkerPress={handleMarkerPress}
      />

      <FAB
        testID="fab-add-place-map"
        icon="plus"
        color={theme.colors.onPrimary}
        style={[styles.fab, { backgroundColor: theme.colors.primary }]}
        onPress={() => router.push('/place/add' as never)}
      />

...
